# messenger

./: .env.example  .env.test  .env.test.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/migrations/: env.py
app/migrations/versions/: 36b487e4fc29_update_users_column_comments.py  6e524442961a_name_unique_constraints_for_users.py  7141741b0900_create_refresh_sessions_table.py  ec6a19c4223c_create_users_table.py
app/models/: refresh_session.py  user.py
app/repositories/: refresh_session.py  user.py
app/routes/: auth.py
app/schemas/: auth.py
app/services/: auth.py  errors.py
tests/: conftest.py  test_login.py  test_register.py  test_security.py  test_smoke.py
