[project]
name = "messenger"
version = "0.0.0"
requires-python = ">=3.14"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
