[project]
name = "messenger"
version = "0.0.0"
requires-python = ">=3.14"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = "alembic/versions/.*"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]